# Dhee

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  deep-research-report.md  docker-compose.yml  install.sh  lme_storage_calc.py  package-lock.json  package.json  pyproject.toml  pytest.ini  simulate_usecases.py  start-bridge.sh  test_real_user.py
dashboard/: package-lock.json  package.json
dhee/: __init__.py  checkpoint_runtime.py  cli.py  cli_config.py  cli_mcp.py  cli_onboard.py  cli_pretty.py  cli_setup.py  cli_update.py  context_ir.py  context_kernel.py  context_state.py  contract_runtime.py  contract_supervisor.py  debugger_api.py  demo.py  doctor.py  exceptions.py  graph_projection_hardening.py  graph_proof_bundle.py  incremental_context.py  install_cleanup.py  mcp_registry.py  mcp_server.py  mcp_slim.py  observability.py  patch_families.py  plugin.py  provider_defaults.py  release_hygiene.py  replay_branching.py  repo_intelligence.py  repo_link.py  runtime.py  runtime_daemon.py  runtime_io.py  secret_store.py  simple.py  task_contracts.py  temporal_fact_integration.py  (+5 more)
dhee-accel/: Cargo.toml  pyproject.toml
dheeModel/: __init__.py  client.py
dhee_shared/: __init__.py  model_paths.py
docs/: capture_screenshots.py  dheemem-spec.md  native-flawless-task-list.md  product_philosophy.md
engram/: cli.py  (+7 more)
engram-accel/: Cargo.toml  pyproject.toml
engram-bridge/: README.md  pyproject.toml  start.sh
engram-bridge/demo/: run-demo.sh  seed.py
engram-bridge/demo/demo-app/: main.py  test_main.py
engram-bridge/engram_bridge/: __init__.py  bridge.py  config.py  utils.py
engram-bridge/engram_bridge/agents/: __init__.py  base.py  claude.py  codex.py  custom.py
engram-bridge/engram_bridge/channels/: __init__.py  base.py  telegram.py  web.py
engram-bridge/engram_bridge/channels/web-ui/: index.html  package-lock.json  package.json  vite.config.ts
engram-bridge/engram_bridge/channels/web-ui/src/: App.tsx  index.css
engram-bridge/engram_bridge/channels/web-ui/src/components/: chat-input.tsx  chat-message.tsx  command-bar.tsx  memory-sidebar.tsx
engram-bridge/engram_bridge/channels/web-ui/src/components/dashboard/: agent-roster.tsx  conversation-entry.tsx  dashboard.tsx  files-panel.tsx  follow-up-input.tsx  kanban-board.tsx  live-feed.tsx  new-task-dialog.tsx  processes-panel.tsx  task-card.tsx  task-detail-view.tsx
engram-bridge/engram_bridge/channels/web-ui/src/components/dialogs/: CommandBar.tsx  CreateProjectDialog.tsx  SettingsDialog.tsx
engram-bridge/engram_bridge/channels/web-ui/src/components/issue/: IssuePanel.tsx
engram-bridge/engram_bridge/channels/web-ui/src/components/kanban/: KanbanBoard.tsx  KanbanCardContent.tsx  KanbanContainer.tsx  KanbanFilterBar.tsx
engram-bridge/engram_bridge/channels/web-ui/src/components/layout/: AppBar.tsx  ResizablePanel.tsx  Sidebar.tsx
engram-bridge/engram_bridge/channels/web-ui/src/components/primitives/: PriorityIcon.tsx  StatusDot.tsx  UserAvatar.tsx
engram-bridge/engram_bridge/channels/web-ui/src/contexts/: ProjectContext.tsx  WebSocketContext.tsx
engram-bridge/engram_bridge/channels/web-ui/src/hooks/: use-api.ts  use-websocket.ts
engram-bridge/engram_bridge/channels/web-ui/src/stores/: useChatStore.ts  useTaskConversationStore.ts  useTodoStore.ts  useUiPreferencesStore.ts  useWarRoomStore.ts
engram-bridge/engram_bridge/channels/web-ui/src/types/: dashboard.ts  index.ts
engram-bridge/engram_bridge/channels/web-ui/src/views/: BoardView.tsx  ChatView.tsx  CoordinationView.tsx  MemoryView.tsx  TaskChatView.tsx  TodoView.tsx  WarRoomView.tsx
engram-bridge/engram_bridge/coordination/: __init__.py
engram-bus/: README.md  pyproject.toml
engram-bus/engram_bus/: __init__.py  bus.py  pubsub.py  server.py  store.py  workspace.py
engram-bus/tests/: test_bus.py
engram-enterprise/: README.md  pyproject.toml
engram-enterprise/engram_enterprise/: __init__.py  acceptance.py  active_memory.py  async_embedder.py  async_llm.py  async_memory.py  async_sqlite.py  cli.py  client.py  context_packer.py  dual_search.py  episodic_store.py  invariants.py  kernel.py  main_cli.py  policy.py  provenance.py  refcounts.py  reranker.py  schema.py  staging_store.py
engram-enterprise/engram_enterprise/api/: app.py  auth.py  schemas.py  server.py
engram-enterprise/engram_enterprise/integrations/: claude_code.py  openclaw.py
engram-enterprise/tests/: test_enterprise.py
engram-failure/: README.md  pyproject.toml
engram-failure/engram_failure/: __init__.py  config.py  failure.py  mcp_tools.py  patterns.py
engram-heartbeat/: pyproject.toml
engram-heartbeat/engram_heartbeat/: __init__.py  behaviors.py  config.py  heartbeat.py  mcp_tools.py  runner.py
engram-metamemory/: README.md  pyproject.toml
engram-metamemory/engram_metamemory/: __init__.py  confidence.py  config.py  mcp_tools.py  metamemory.py
engram-orchestrator/: pyproject.toml
engram-orchestrator/engram_orchestrator/: __init__.py  coordinator.py  registry.py  router.py
engram-policy/: pyproject.toml
engram-policy/engram_policy/: __init__.py  config.py  engine.py  masking.py  mcp_tools.py  scopes.py  tokens.py
engram-procedural/: README.md  pyproject.toml
engram-procedural/engram_procedural/: __init__.py  config.py  extraction.py  mcp_tools.py  procedural.py
engram-reconsolidation/: README.md  pyproject.toml
engram-reconsolidation/engram_reconsolidation/: __init__.py  config.py  mcp_tools.py  reconsolidation.py  window.py
engram-resilience/: pyproject.toml
engram-resilience/engram_resilience/: __init__.py  compaction.py  config.py  fallback.py  mcp_tools.py  retry.py
engram-skills/: pyproject.toml
engram-skills/engram_skills/: __init__.py  config.py  loader.py  mcp_tools.py  registry.py  skill.py
engram-spawn/: pyproject.toml
engram-spawn/engram_spawn/: __init__.py  config.py  decomposer.py  mcp_tools.py  spawner.py  tracker.py
engram-working/: README.md  pyproject.toml
engram-working/engram_working/: __init__.py  buffer.py  config.py  mcp_tools.py  working.py
(+754 files in other folders)
