[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-memory"
version = "0.5.0"
description = "Biologically-inspired memory layer for AI agents — forgetting, echo encoding, and dynamic categories"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Engram Team"}
]
keywords = ["memory-layer", "mcp", "claude", "cursor", "codex", "ai", "agents", "forgetting", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "requests>=2.28.0",
    "sqlite-vec>=0.1.1",
    "engram-bus>=0.1.0",
]

[project.optional-dependencies]
# LLM / embedding providers (install what you use)
gemini = ["google-generativeai>=0.3.0"]
openai = ["openai>=1.0.0"]
nvidia = ["openai>=1.0.0"]
ollama = ["ollama>=0.4.0"]
# Integrations
mcp = ["mcp>=1.0.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
accel = ["engram-accel>=0.1.0"]
# Power packages (install what you need)
router = ["engram-router>=0.2.0"]
identity = ["engram-identity>=0.1.0"]
heartbeat = ["engram-heartbeat>=0.1.0"]
policy = ["engram-policy>=0.1.0"]
skills = ["engram-skills>=0.1.0"]
spawn = ["engram-spawn>=0.1.0"]
resilience = ["engram-resilience>=0.1.0"]
metamemory = ["engram-metamemory>=0.1.0"]
prospective = ["engram-prospective>=0.1.0"]
procedural = ["engram-procedural>=0.1.0"]
reconsolidation = ["engram-reconsolidation>=0.1.0"]
failure = ["engram-failure>=0.1.0"]
working = ["engram-working>=0.1.0"]
warroom = ["engram-warroom>=0.1.0"]
powers = [
    "engram-router>=0.2.0",
    "engram-identity>=0.1.0",
    "engram-heartbeat>=0.1.0",
    "engram-policy>=0.1.0",
    "engram-skills>=0.1.0",
    "engram-spawn>=0.1.0",
    "engram-resilience>=0.1.0",
    "engram-metamemory>=0.1.0",
    "engram-prospective>=0.1.0",
    "engram-procedural>=0.1.0",
    "engram-reconsolidation>=0.1.0",
    "engram-failure>=0.1.0",
    "engram-working>=0.1.0",
    "engram-warroom>=0.1.0",
]
all = [
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "ollama>=0.4.0",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "engram-accel>=0.1.0",
    "engram-router>=0.2.0",
    "engram-identity>=0.1.0",
    "engram-heartbeat>=0.1.0",
    "engram-policy>=0.1.0",
    "engram-skills>=0.1.0",
    "engram-spawn>=0.1.0",
    "engram-resilience>=0.1.0",
    "engram-metamemory>=0.1.0",
    "engram-prospective>=0.1.0",
    "engram-procedural>=0.1.0",
    "engram-reconsolidation>=0.1.0",
    "engram-failure>=0.1.0",
    "engram-working>=0.1.0",
    "engram-warroom>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
engram-mcp = "engram.mcp_server:run"
engram = "engram.cli:main"

[project.urls]
Homepage = "https://github.com/Ashish-dwi99/Engram"
Repository = "https://github.com/Ashish-dwi99/Engram"
Issues = "https://github.com/Ashish-dwi99/Engram/issues"
Documentation = "https://github.com/Ashish-dwi99/Engram#readme"
Changelog = "https://github.com/Ashish-dwi99/Engram/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["engram*"]
