[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhee"
version = "7.2.2"
description = "Dhee - world memory layer and context compiler for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sankhya AI Labs"}
]
keywords = ["world-memory", "context-compiler", "developer-brain", "coding-agents", "mcp", "claude-code", "codex", "chotu", "local-first", "memory-layer", "ai", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pydantic>=2.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "cryptography>=42.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.9",
    "kuzu>=0.11.3",
    "tree-sitter>=0.23.2,<0.26",
    "tree-sitter-python>=0.23.6,<0.26",
    "tree-sitter-javascript>=0.23.1,<0.26",
    "tree-sitter-typescript>=0.23.2,<0.26",
]

[project.optional-dependencies]
# LLM / embedding providers (install what you use)
gemini = ["google-genai>=1.0.0"]
openai = ["openai>=1.0.0"]
elevenlabs = ["elevenlabs>=2.49.0"]
ollama = ["ollama>=0.4.0"]
# Internal providers (not documented, still functional)
nvidia = ["openai>=1.0.0"]
zvec = ["zvec>=0.4.0; python_version >= '3.11'"]
sqlite_vec = ["sqlite-vec>=0.1.1"]
graph = ["kuzu>=0.11.3"]
swe = [
    "tree-sitter>=0.23.2,<0.26",
    "tree-sitter-python>=0.23.6,<0.26",
    "tree-sitter-javascript>=0.23.1,<0.26",
    "tree-sitter-typescript>=0.23.2,<0.26",
]
# Local Qwen stack (CPU-native, zero API cost)
local = ["llama-cpp-python>=0.3", "sentence-transformers>=3.0"]
# Integrations
# `mcp>=1.0.0` requires Python 3.10+, while Dhee's core package supports 3.9.
mcp = ["mcp>=1.0.0; python_version >= '3.10'"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "python-multipart>=0.0.9", "httpx>=0.25.0", "websockets>=12.0"]
# Handoff bus ships inside Dhee's wheel. Keep the extra as a no-op
# compatibility alias so `pip install dhee[bus]` remains valid.
bus = []
benchmarks = ["huggingface_hub>=0.24.0"]
# Edge/hardware deployment (offline, ONNX embedder)
edge = ["onnxruntime>=1.16"]
# Training (QLoRA fine-tuning)
training = ["unsloth", "datasets>=2.0", "trl>=0.7", "peft>=0.6"]
app = [
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "ollama>=0.4.0",
]
all = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "elevenlabs>=2.49.0",
    "ollama>=0.4.0",
    "zvec>=0.4.0; python_version >= '3.11'",
    "mcp>=1.0.0; python_version >= '3.10'",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.9",
    "kuzu>=0.11.3",
    "huggingface_hub>=0.24.0",
    "llama-cpp-python>=0.3",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "openai>=1.0.0",
    "huggingface_hub>=0.24.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
dhee = "dhee.cli:main"
dhee-ui = "dhee.ui.cli:main"
dhee-mcp = "dhee.mcp_slim:run"
dhee-mcp-full = "dhee.mcp_server:run"
dhee-debugger-api = "dhee.debugger_api:run"
engram-bus = "engram_bus.server:main"

[project.urls]
Homepage = "https://github.com/Sankhya-AI/Dhee"
Repository = "https://github.com/Sankhya-AI/Dhee"
Issues = "https://github.com/Sankhya-AI/Dhee/issues"
Documentation = "https://github.com/Sankhya-AI/Dhee#readme"
Changelog = "https://github.com/Sankhya-AI/Dhee/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [".", "engram-bus"]
include = ["dhee*", "engram*", "engram_bus*"]
exclude = [
    "engram-bus*",
    "engram-bridge*",
    "engram-enterprise*",
    "engram-failure*",
    "engram-heartbeat*",
    "engram-identity*",
    "engram-metamemory*",
    "engram-policy*",
]

[tool.setuptools.package-data]
"dhee.ui" = [
    "web/dist/*",
    "web/dist/assets/*",
    "web/public/*",
    "web/*.html",
    "web/*.json",
    "web/*.ts",
    "web/src/*",
    "web/src/components/*",
    "web/src/components/canvas/*",
    "web/src/components/cards/*",
    "web/src/components/graph/*",
    "web/src/components/ui/*",
    "web/src/views/*",
]
