[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-bus"
version = "0.1.0"
description = "Lightweight real-time agent-to-agent communication bus — zero dependencies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Engram Team"}]
keywords = ["agents", "bus", "communication", "memory", "mcp", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
# ZERO dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
engram-bus = "engram_bus.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engram_bus*"]
